--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,13 +7,19 @@
       <h1>Sign In</h1>
       <br>
       <div class="row">
-        <div class="col-xs-12 col-md-6 col-lg-6">
+        <div class="col-xs-12 col-md-6 col-md-offset-3 col-lg-6 col-lg-offset-3">
             <form method="POST">
-              <label for="inputUser" class="sr-only">Username</label>
-              <input type="text" id="inputUser" name="username" class="form-control" placeholder="Username" required="" autofocus="">
-              <label for="inputPassword" class="sr-only">Password</label>
-              <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required="">
-              <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+              <div class="form-group">
+                <label for="inputUser" class="sr-only">Username</label>
+                <input type="text" id="inputUser" name="username" class="form-control" placeholder="Username" required="" autofocus="">
+              </div>
+              <div class="form-group">
+                <label for="inputPassword" class="sr-only">Password</label>
+                <input type="password" id="inputPassword" name="password" class="form-control" placeholder="Password" required="">
+              </div>
+              <div class="form-group">
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+              </div>
             </form>
         </div>
       </div>
