--- a/views/private_welcome.ejs
+++ b/views/private_welcome.ejs
@@ -6,7 +6,7 @@
   <div class="container">
     <h1>Welcome to the private section</h1>
     <br>
-    <p><a href="/logout">Logout</a></p>
+    <p><a class="btn btn-danger" href="/logout">Logout</a></p>
 
     <% posts.forEach(post => { %>
       <div class="panel panel-default">
