--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -6,7 +6,9 @@
   <div class="container">
     <h1>Welcome</h1>
     <br>
-    <p><a href="/login">Go to login</a></p>
+    <p>
+      <a class="btn btn-primary" href="/login">Go to login</a>
+    </p>
 
     <% posts.forEach(post => { %>
       <div class="panel panel-default">
